--- a/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSAmountClassEntity
   fullName: CRMScript.NetServer.NSAmountClassEntity
   type: Class
-  summary: 
+  summary: "\nCarrier object for AmountClassEntity.\n"
   example: 
 - uid: CRMScript.NetServer.NSAmountClassEntity.#ctor
   commentId: M:CRMScript.NetServer.NSAmountClassEntity.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSAmountClassEntity.#ctor
   fullName: CRMScript.NetServer.NSAmountClassEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAmountClassEntity class.\n"
   remarks: 
   syntax: 
     content: NSAmountClassEntity
