--- a/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
@@ -113,7 +113,7 @@ items:
   nameWithType: NSAppointment
   fullName: CRMScript.NetServer.NSAppointment
   type: Class
-  summary: 
+  summary: "\nSimple read-only appointment data.\n"
   example: 
 - uid: CRMScript.NetServer.NSAppointment.#ctor
   commentId: M:CRMScript.NetServer.NSAppointment.#ctor
@@ -125,7 +125,7 @@ items:
   nameWithType: NSAppointment.#ctor
   fullName: CRMScript.NetServer.NSAppointment.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAppointment class.\n"
   remarks: 
   syntax: 
     content: NSAppointment
@@ -2058,7 +2058,7 @@ items:
   nameWithType: NSAppointment.SetRecurringEndDate(DateTime)
   fullName: CRMScript.NetServer.NSAppointment.SetRecurringEndDate(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRecurringEndDate(DateTime recurringEndDate)
@@ -2080,7 +2080,7 @@ items:
   nameWithType: NSAppointment.SetRecurringPattern(Integer)
   fullName: CRMScript.NetServer.NSAppointment.SetRecurringPattern(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Void SetRecurringPattern(Integer pattern)
@@ -2102,7 +2102,7 @@ items:
   nameWithType: NSAppointment.SetRecurringStartDate(DateTime)
   fullName: CRMScript.NetServer.NSAppointment.SetRecurringStartDate(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRecurringStartDate(DateTime recurringStartDate)
