--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
@@ -292,7 +292,7 @@ items:
   nameWithType: NSAppointmentAgent.CanAssignToProjectMember(Integer,Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.CanAssignToProjectMember(Integer,Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool CanAssignToProjectMember(Integer projectId, Integer suggestedAppointmentId)
@@ -501,7 +501,7 @@ items:
   nameWithType: NSAppointmentAgent.CreateDefaultAppointmentEntityFromProjectSuggestion(Integer,Integer,Bool,Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.CreateDefaultAppointmentEntityFromProjectSuggestion(Integer,Integer,Bool,Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAppointmentEntity CreateDefaultAppointmentEntityFromProjectSuggestion(Integer suggestedAppointmentId, Integer projectId, Bool createNow, Integer ownerId)
@@ -832,7 +832,7 @@ items:
   nameWithType: NSAppointmentAgent.GetAlarms(Bool,Bool,Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetAlarms(Bool,Bool,Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSMultiAlarmData GetAlarms(Bool includeInvitations, Bool includeAllAppointments, Integer defaultAlarmLeadTimeInMinutes)
@@ -1022,7 +1022,7 @@ items:
   nameWithType: NSAppointmentAgent.GetAssociateDiary(Integer,Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetAssociateDiary(Integer,Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAppointment[] GetAssociateDiary(Integer associateId, DateTime startTime, DateTime endTime, Integer count)
@@ -1053,7 +1053,7 @@ items:
   nameWithType: NSAppointmentAgent.GetAssociatesDiary(Integer[])
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetAssociatesDiary(Integer[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAppointment[] GetAssociatesDiary(Integer[] associateIds, DateTime startTime, DateTime endTime)
@@ -1299,7 +1299,7 @@ items:
   nameWithType: NSAppointmentAgent.GetDiaryByGroup(Integer,Integer,Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetDiaryByGroup(Integer,Integer,Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAppointment[] GetDiaryByGroup(Integer groupId, Integer groupType, DateTime startTime, DateTime endTime, Integer count)
