--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentSyncData.yml
@@ -63,7 +63,7 @@ items:
   nameWithType: NSAppointmentSyncData
   fullName: CRMScript.NetServer.NSAppointmentSyncData
   type: Class
-  summary: 
+  summary: "\nCarrier object for AppointmentSyncData.\n"
   example: 
 - uid: CRMScript.NetServer.NSAppointmentSyncData.#ctor
   commentId: M:CRMScript.NetServer.NSAppointmentSyncData.#ctor
@@ -75,7 +75,7 @@ items:
   nameWithType: NSAppointmentSyncData.#ctor
   fullName: CRMScript.NetServer.NSAppointmentSyncData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAppointmentSyncData class.\n"
   remarks: 
   syntax: 
     content: NSAppointmentSyncData
@@ -808,7 +808,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetIsAllDay(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetIsAllDay(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsAllDay(Bool isAllDay)
@@ -830,7 +830,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetIsAssignment(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetIsAssignment(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsAssignment(Bool isAssignment)
@@ -852,7 +852,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetIsBusy(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetIsBusy(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsBusy(Bool isBusy)
@@ -874,7 +874,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetIsCompleted(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetIsCompleted(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsCompleted(Bool isCompleted)
@@ -896,7 +896,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetIsInvitation(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetIsInvitation(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsInvitation(Bool isInvitation)
@@ -918,7 +918,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetIsTentative(Bool)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetIsTentative(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsTentative(Bool isTentative)
@@ -962,7 +962,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetParticipants(NSParticipantSyncData[])
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetParticipants(NSParticipantSyncData[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetParticipants(NSParticipantSyncData[] participants)
@@ -984,7 +984,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetPersonFormalName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetPersonFormalName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonFormalName(String personFormalName)
@@ -1160,7 +1160,7 @@ items:
   nameWithType: NSAppointmentSyncData.SetTaskName(String)
   fullName: CRMScript.NetServer.NSAppointmentSyncData.SetTaskName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTaskName(String taskName)
