--- a/docs/api-reference/CRMScript.NetServer.NSApproveRejectResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSApproveRejectResponse.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSApproveRejectResponse
   fullName: CRMScript.NetServer.NSApproveRejectResponse
   type: Class
-  summary: 
+  summary: "\nContains a PluginResponse and an appointment ID if the operation created one.\n"
   example: 
 - uid: CRMScript.NetServer.NSApproveRejectResponse.#ctor
   commentId: M:CRMScript.NetServer.NSApproveRejectResponse.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSApproveRejectResponse.#ctor
   fullName: CRMScript.NetServer.NSApproveRejectResponse.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSApproveRejectResponse class.\n"
   remarks: 
   syntax: 
     content: NSApproveRejectResponse
