--- a/docs/api-reference/CRMScript.NetServer.NSArchiveColumnData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveColumnData.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSArchiveColumnData
   fullName: CRMScript.NetServer.NSArchiveColumnData
   type: Class
-  summary: 
+  summary: "\nData carrier class for an item (cell) in an archive. Contains properties and members for three distinct values: The (visible) display value; the tooltip hint, and the link hint.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveColumnData.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveColumnData.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSArchiveColumnData.#ctor
   fullName: CRMScript.NetServer.NSArchiveColumnData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveColumnData class.\n"
   remarks: 
   syntax: 
     content: NSArchiveColumnData
