--- a/docs/api-reference/CRMScript.NetServer.NSArchiveColumnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveColumnInfo.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSArchiveColumnInfo
   fullName: CRMScript.NetServer.NSArchiveColumnInfo
   type: Class
-  summary: 
+  summary: "\nInformation about the definition and properties of an archive display column. It is used by the archive MDO providers to construct column lists for the configuration dialogs, and by the archive control to know what type (and other properties) each column has. The class is serializable and used on both the application and web server sides.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveColumnInfo.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveColumnInfo.#ctor
@@ -49,7 +49,7 @@ items:
   nameWithType: NSArchiveColumnInfo.#ctor
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveColumnInfo class.\n"
   remarks: 
   syntax: 
     content: NSArchiveColumnInfo
@@ -284,7 +284,7 @@ items:
   nameWithType: NSArchiveColumnInfo.GetSourceCode()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetSourceCode()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSourceCode()
@@ -303,14 +303,14 @@ items:
   nameWithType: NSArchiveColumnInfo.GetWidth()
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.GetWidth()
   type: Method
-  summary: ""
-  remarks: 
+  summary: # TODO
+  remarks: "\nPercent-formatted fields grow and shrink; number-of-characters formatted fields have constant width when the whole archive width changes.\n"
   syntax: 
     content: String GetWidth()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: The width specification, if the column info has been extended with GUI-based information. It is either &quot;n%&quot; or &quot;nc&quot;, where n is an integer. Percent-formatted fields grow and shrink; number-of-characters formatted fields have constant width when the whole archive width changes.
+      description: The width specification, if the column info has been extended with GUI-based information. It is either &quot;n%&quot; or &quot;nc&quot;, where n is an integer.
   example: 
   - "\n<pre><code>NSArchiveColumnInfo thing;\nString width = thing.GetWidth();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveColumnInfo.SetCanOrderBy(Bool)
@@ -565,7 +565,7 @@ items:
   nameWithType: NSArchiveColumnInfo.SetSourceCode(String)
   fullName: CRMScript.NetServer.NSArchiveColumnInfo.SetSourceCode(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSourceCode(String code)
