--- a/docs/api-reference/CRMScript.NetServer.NSArchiveConfiguration.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveConfiguration.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSArchiveConfiguration
   fullName: CRMScript.NetServer.NSArchiveConfiguration
   type: Class
-  summary: 
+  summary: "\nUsed to store and fetch the configuration of an archive. The configuration consists of entities and columns; entities correspond to archive provider entities and the checkboxes you see in the bottom of standard archives. Column configuration includes both what columns should be visible, what order they are in (left to right), and whether the archive rows should be sorted by one or more columns.<p></p>\nDesired columns can be set through the selectable MDO list called archiveColumns:\\<perovider name>, and entities can be set through the selectable MDO list archiveEntities:\\<provider name>. You can also use the SetChosenEntities and SetChosenColumns method of this service. The selectable MDO list implementation is suitable for data binding using mdo list controls.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveConfiguration.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveConfiguration.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSArchiveConfiguration.#ctor
   fullName: CRMScript.NetServer.NSArchiveConfiguration.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveConfiguration class.\n"
   remarks: 
   syntax: 
     content: NSArchiveConfiguration
@@ -126,7 +126,7 @@ items:
   nameWithType: NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
   fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetArchiveColumnInfo(NSArchiveColumnInfo[] archiveColumnInfo)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
   fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetArchiveEntityInfo(NSSelectableMDOListItem[] archiveEntityInfo)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
   fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetArchiveOrderByInfo(NSArchiveOrderByInfo[] archiveOrderByInfo)
