--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSArchiveListItem
   fullName: CRMScript.NetServer.NSArchiveListItem
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSArchiveListItem.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveListItem.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSArchiveListItem.#ctor
   fullName: CRMScript.NetServer.NSArchiveListItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveListItem class.\n"
   remarks: 
   syntax: 
     content: NSArchiveListItem
