--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListResult.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSArchiveListResult
   fullName: CRMScript.NetServer.NSArchiveListResult
   type: Class
-  summary: 
+  summary: "\nHeader/Detail variant of archive result, with a Row Count plus the actual rows. Future extensions may include other header data on the same level as the RowCount.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveListResult.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveListResult.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSArchiveListResult.#ctor
   fullName: CRMScript.NetServer.NSArchiveListResult.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveListResult class.\n"
   remarks: 
   syntax: 
     content: NSArchiveListResult
