--- a/docs/api-reference/CRMScript.NetServer.NSArchiveOrderByInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveOrderByInfo.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSArchiveOrderByInfo
   fullName: CRMScript.NetServer.NSArchiveOrderByInfo
   type: Class
-  summary: ""
+  summary: "\nCarries information about an ordering criterion for an archive.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSArchiveOrderByInfo.#ctor
   fullName: CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveOrderByInfo class.\n"
   remarks: 
   syntax: 
     content: NSArchiveOrderByInfo
