--- a/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionGroup.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup
   type: Class
-  summary: 
+  summary: "\nCarrier for restriction group. Contains all the search restrictions for the group - that is, ArchiveRestrictionInfo - objects, including info such as rank and name.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSArchiveRestrictionGroup.#ctor
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveRestrictionGroup class.\n"
   remarks: 
   syntax: 
     content: NSArchiveRestrictionGroup
