--- a/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionInfo.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo
   type: Class
-  summary: 
+  summary: "\nCarries information about a restriction on the query of an archive provider.\n"
   example: 
 - uid: CRMScript.NetServer.NSArchiveRestrictionInfo.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveRestrictionInfo.#ctor
@@ -45,7 +45,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.#ctor
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArchiveRestrictionInfo class.\n"
   remarks: 
   syntax: 
     content: NSArchiveRestrictionInfo
@@ -180,7 +180,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetOperator()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetOperator()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOperator()
@@ -200,7 +200,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.GetParenthesis()
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.GetParenthesis()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetParenthesis()
@@ -431,7 +431,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetParenthesis(Integer)
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetParenthesis(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetParenthesis(Integer p)
@@ -474,7 +474,7 @@ items:
   nameWithType: NSArchiveRestrictionInfo.SetUniqueHash(Integer)
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetUniqueHash(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUniqueHash(Integer uniqueHash)
