--- a/docs/api-reference/CRMScript.NetServer.NSArea.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArea.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSArea
   fullName: CRMScript.NetServer.NSArea
   type: Class
-  summary: 
+  summary: "\nCarrier object for Area.\n"
   example: 
 - uid: CRMScript.NetServer.NSArea.#ctor
   commentId: M:CRMScript.NetServer.NSArea.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSArea.#ctor
   fullName: CRMScript.NetServer.NSArea.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSArea class.\n"
   remarks: 
   syntax: 
     content: NSArea
@@ -192,7 +192,7 @@ items:
   nameWithType: NSArea.SetFreetextEnabeled(Bool)
   fullName: CRMScript.NetServer.NSArea.SetFreetextEnabeled(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFreetextEnabeled(Bool freetextEnabeled)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSArea.SetNumberOfLogins(Integer)
   fullName: CRMScript.NetServer.NSArea.SetNumberOfLogins(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfLogins(Integer numberOfLogins)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSArea.SetNumberOfUsers(Integer)
   fullName: CRMScript.NetServer.NSArea.SetNumberOfUsers(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumberOfUsers(Integer numberOfUsers)
