--- a/docs/api-reference/CRMScript.NetServer.NSAssociate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAssociate.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSAssociate
   fullName: CRMScript.NetServer.NSAssociate
   type: Class
-  summary: 
+  summary: "\nCarrier object for Associate.\n"
   example: 
 - uid: CRMScript.NetServer.NSAssociate.#ctor
   commentId: M:CRMScript.NetServer.NSAssociate.#ctor
@@ -47,7 +47,7 @@ items:
   nameWithType: NSAssociate.#ctor
   fullName: CRMScript.NetServer.NSAssociate.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAssociate class.\n"
   remarks: 
   syntax: 
     content: NSAssociate
