--- a/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSAttachmentEntity
   fullName: CRMScript.NetServer.NSAttachmentEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSAttachmentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSAttachmentEntity.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSAttachmentEntity.#ctor
   fullName: CRMScript.NetServer.NSAttachmentEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAttachmentEntity class.\n"
   remarks: 
   syntax: 
     content: NSAttachmentEntity
