--- a/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
@@ -100,8 +100,8 @@ items:
   nameWithType: NSBLOBAgent.ChangePersonImage(Integer,Integer)
   fullName: CRMScript.NetServer.NSBLOBAgent.ChangePersonImage(Integer,Integer)
   type: Method
-  summary: 
-  remarks: "\n If the Binary object ID is 0, any image link is removed from the person.\n"
+  summary: # TODO
+  remarks: "\nIf the Binary object ID is 0, any image link is removed from the person.\n"
   syntax: 
     content: Void ChangePersonImage(Integer personId, Integer blobId)
     parameters:
