--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSBatchTaskInfo.#ctor
   - CRMScript.NetServer.NSBatchTaskInfo.GetAssociateId()
   - CRMScript.NetServer.NSBatchTaskInfo.GetContext()
   - CRMScript.NetServer.NSBatchTaskInfo.GetCreated()
@@ -26,7 +27,6 @@ items:
   - CRMScript.NetServer.NSBatchTaskInfo.GetResult()
   - CRMScript.NetServer.NSBatchTaskInfo.GetStartCount()
   - CRMScript.NetServer.NSBatchTaskInfo.GetState()
-  - CRMScript.NetServer.NSBatchTaskInfo.#ctor
   - CRMScript.NetServer.NSBatchTaskInfo.SetAssociateId(Integer)
   - CRMScript.NetServer.NSBatchTaskInfo.SetContext(String)
   - CRMScript.NetServer.NSBatchTaskInfo.SetCreated(DateTime)
@@ -51,7 +51,22 @@ items:
   nameWithType: NSBatchTaskInfo
   fullName: CRMScript.NetServer.NSBatchTaskInfo
   type: Class
-  summary: 
+  summary: "\nContains information about one batch task.\n"
+  example: 
+- uid: CRMScript.NetServer.NSBatchTaskInfo.#ctor
+  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSBatchTaskInfo
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSBatchTaskInfo.#ctor
+  fullName: CRMScript.NetServer.NSBatchTaskInfo.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the NSBatchTaskInfo class.\n"
+  remarks: 
+  syntax: 
+    content: NSBatchTaskInfo
   example: 
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetAssociateId()
   commentId: M:CRMScript.NetServer.NSBatchTaskInfo.GetAssociateId()
@@ -63,14 +78,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetAssociateId()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetAssociateId()
   type: Method
-  summary: "\nTask owner. If it is a System task, AssociateId = 0.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Task owner. If it is a System task, AssociateId = 0.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetContext()
@@ -83,14 +98,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetContext()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetContext()
   type: Method
-  summary: "\nContext for the executing task.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContext()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Context for the executing task.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString context = thing.GetContext();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetCreated()
@@ -103,14 +118,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetCreated()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetCreated()
   type: Method
-  summary: "\nTask creation time.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetCreated()
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      description:
+      description: Task creation time.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nDateTime created = thing.GetCreated();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetDatabaseSerialNumber()
@@ -123,14 +138,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetDatabaseSerialNumber()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetDatabaseSerialNumber()
   type: Method
-  summary: "\nSerial number of the database the task is to run on.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDatabaseSerialNumber()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Serial number of the database the task is to run on.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString databaseSerialNumber = thing.GetDatabaseSerialNumber();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetDescription()
@@ -143,14 +158,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetDescription()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetDescription()
   type: Method
-  summary: "\nDescription of the task.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Description of the task.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString description = thing.GetDescription();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetDetailsRecord()
@@ -163,14 +178,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetDetailsRecord()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetDetailsRecord()
   type: Method
-  summary: "\nRecord ID of a row in the DetailsTable containing more info about the task.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDetailsRecord()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Record ID of a row in the DetailsTable containing more info about the task.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nInteger detailsRecord = thing.GetDetailsRecord();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetDetailsTable()
@@ -183,14 +198,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetDetailsTable()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetDetailsTable()
   type: Method
-  summary: "\nID of table with more information about the task.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDetailsTable()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: ID of table with more information about the task.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nInteger detailsTable = thing.GetDetailsTable();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetId()
@@ -203,14 +218,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetId()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetId()
   type: Method
-  summary: "\nID of the task.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: ID of the task.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nInteger id = thing.GetId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetIsInternalTask()
@@ -223,14 +238,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetIsInternalTask()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetIsInternalTask()
   type: Method
-  summary: "\nIf IsInternalTask is true, this task will not add a trace to the database.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsInternalTask()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: If true, this task will not add a trace to the database.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nBool isInternalTask = thing.GetIsInternalTask();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetIsSystemTask()
@@ -243,14 +258,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetIsSystemTask()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetIsSystemTask()
   type: Method
-  summary: "\nIf IsSystemTask is true, the task is not initiated by an associate.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsSystemTask()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: If true, the task is not initiated by an associate.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nBool isSystemTask = thing.GetIsSystemTask();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetLastStarted()
@@ -263,14 +278,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetLastStarted()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetLastStarted()
   type: Method
-  summary: "\nWhen was the task last started.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetLastStarted()
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      description:
+      description: When was the task last started.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nDateTime lastStarted = thing.GetLastStarted();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetName()
@@ -283,14 +298,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetName()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetName()
   type: Method
-  summary: "\nName of the task.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Name of the task.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetParameterObject()
@@ -303,14 +318,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetParameterObject()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetParameterObject()
   type: Method
-  summary: "\nParameterObject will be serialized to a binary blob and saved in the BinaryObject table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Map GetParameterObject()
     parameters: []
     return:
       type: CRMScript.Global.Map
-      description:
+      description: ParameterObject will be serialized to a binary blob and saved in the BinaryObject table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nMap parameterObject = thing.GetParameterObject();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetProgressDescription()
@@ -323,14 +338,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetProgressDescription()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetProgressDescription()
   type: Method
-  summary: "\nDescriptive text for the current stage\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetProgressDescription()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Descriptive text for the current stage
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString progressDescription = thing.GetProgressDescription();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetProgressPercent()
@@ -343,14 +358,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetProgressPercent()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetProgressPercent()
   type: Method
-  summary: "\nTask progress, in percent of estimated total\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetProgressPercent()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Task progress, in percent of estimated total
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nInteger progressPercent = thing.GetProgressPercent();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetRequest()
@@ -363,14 +378,14 @@ items:
   nameWithType: NSBatchTaskInfo.GetRequest()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetRequest()
   type: Method
-  summary: "\nMaps to the request field in the batchtask table.\n"
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRequest()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Maps to the request field in the batchtask table.
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString request = thing.GetRequest();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetResponse()
@@ -453,21 +468,6 @@ items:
       description:
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nInteger state = thing.GetState();</code></pre>\n"
-- uid: CRMScript.NetServer.NSBatchTaskInfo.#ctor
-  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSBatchTaskInfo
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSBatchTaskInfo.#ctor
-  fullName: CRMScript.NetServer.NSBatchTaskInfo.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSBatchTaskInfo
-  example: 
 - uid: CRMScript.NetServer.NSBatchTaskInfo.SetAssociateId(Integer)
   commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetAssociateId(Integer)
   id: 'SetAssociateId(Integer)'
