--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -125,7 +125,7 @@ items:
   nameWithType: NSAppointmentEntity
   fullName: CRMScript.NetServer.NSAppointmentEntity
   type: Class
-  summary: 
+  summary: "\nAppointments appear in the diary, and have links to a Contact/Person and possibly a Project or Sale. They have start and end time+date.\n"
   example: 
 - uid: CRMScript.NetServer.NSAppointmentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSAppointmentEntity.#ctor
@@ -137,7 +137,7 @@ items:
   nameWithType: NSAppointmentEntity.#ctor
   fullName: CRMScript.NetServer.NSAppointmentEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAppointmentEntity class.\n"
   remarks: 
   syntax: 
     content: NSAppointmentEntity
